// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCheckbox should render correctly 1`] = `
<div class="m-checkbox m--is-checkbox-left">
    <input type="checkbox" id="mCheckbox-uuid" class="m-checkbox__hidden">
    <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
    </label>
    <div class="m-validation-message m-checkbox__message"></div>
</div>
`;

exports[`MCheckbox should render correctly when a label is provided 1`] = `
<div class="m-checkbox m--is-checkbox-left">
    <input type="checkbox" id="mCheckbox-uuid" class="m-checkbox__hidden">
    <label for="mCheckbox-uuid" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span> <span class="m-checkbox__label">label</span></label>
    <div class="m-validation-message m-checkbox__message"></div>
</div>
`;

exports[`MCheckbox should render correctly when disabled 1`] = `
<div class="m-checkbox m--is-checkbox-left m--is-disabled">
    <input type="checkbox" id="mCheckbox-uuid" disabled="disabled" class="m-checkbox__hidden">
    <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
    </label>
    <div class="m-validation-message m-checkbox__message"></div>
</div>
`;

exports[`MCheckbox should render correctly when disabled and checked 1`] = `
<div class="m-checkbox m--is-checkbox-left m--is-checked m--is-disabled">
    <input type="checkbox" id="mCheckbox-uuid" disabled="disabled" checked="checked" class="m-checkbox__hidden">
    <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
    </label>
    <div class="m-validation-message m-checkbox__message"></div>
</div>
`;

exports[`MCheckbox should render correctly when indeterminated (with correct classes) 1`] = `
<div class="m-checkbox m--is-checkbox-left m--is-indeterminate">
    <input type="checkbox" id="mCheckbox-uuid" class="m-checkbox__hidden">
    <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
    </label>
    <div class="m-validation-message m-checkbox__message"></div>
</div>
`;

exports[`MCheckbox should render correctly when position prop is right 1`] = `
<div class="m-checkbox m--is-checkbox-right">
    <input type="checkbox" id="mCheckbox-uuid" class="m-checkbox__hidden">
    <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
    </label>
    <div class="m-validation-message m-checkbox__message"></div>
</div>
`;

exports[`MCheckbox should render correctly when readonly 1`] = `
<div class="m-checkbox m--is-checkbox-left m--is-readonly">
    <input type="hidden" id="mCheckbox-uuid">
    <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
    </label>
    <div class="m-validation-message m-checkbox__message"></div>
</div>
`;

exports[`MCheckbox should render correctly when value prop is true 1`] = `
<div class="m-checkbox m--is-checkbox-left m--is-checked">
    <input type="checkbox" id="mCheckbox-uuid" checked="checked" class="m-checkbox__hidden">
    <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
    </label>
    <div class="m-validation-message m-checkbox__message"></div>
</div>
`;
